<resources>
    <string name="abbrev_chinese_date">MMMd日</string>
    <string name="abbrev_chinese_ug_date">dd-MMM E</string>
    <string name="abbrev_wday_month_day_no_year">EEEEMMMMd</string>
    <string name="abbrev_wday_month_day_no_year_alarm">EEEMMMd</string>
    <string name="abbrev_week">EEEE</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_slice_error">"Couldn't connect"</string>
    <string name="abc_slice_more">More</string>
    <string name="abc_slice_more_content">+ %1$d</string>
    <string name="abc_slice_permission_allow">Allow</string>
    <string name="abc_slice_permission_checkbox">Allow %1$s to show slices from any app</string>
    <string name="abc_slice_permission_deny">Deny</string>
    <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
    <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
    <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
    <string name="abc_slice_show_more">Show more</string>
    <string name="abc_slice_updated">Updated %1$s</string>
    <string name="abc_slices_permission_request">%1$s wants to show %2$s slices</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_accessibility_button">Accessibility</string>
    <string name="accessibility_action_divider_bottom_full">Bottom Full Screen</string>
    <string name="accessibility_action_divider_left_30">Left 30%</string>
    <string name="accessibility_action_divider_left_50">Left 50%</string>
    <string name="accessibility_action_divider_left_70">Left 70%</string>
    <string name="accessibility_action_divider_left_full">Left Full Screen</string>
    <string name="accessibility_action_divider_right_full">Right Full Screen</string>
    <string name="accessibility_action_divider_top_30">Top 30%</string>
    <string name="accessibility_action_divider_top_50">Top 50%</string>
    <string name="accessibility_action_divider_top_70">Top 70%</string>
    <string name="accessibility_action_divider_top_full">Top Full Screen</string>
    <string name="accessibility_airplane_mode">Airplane mode.</string>
    <string name="accessibility_alarm">Alarm</string>
    <string name="accessibility_ambient_display_charging">Charging</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_battery">Battery</string>
    <string name="accessibility_battery_charging">Charging</string>
    <string name="accessibility_battery_details">Open battery details</string>
    <string name="accessibility_battery_full">Battery full.</string>
    <string name="accessibility_battery_level">Battery level is %d%%.</string>
    <string name="accessibility_battery_level_charging">Battery charging, %d percent.</string>
    <string name="accessibility_battery_level_with_estimate">Battery %1$s percent, about %2$s left based on your usage</string>
    <string name="accessibility_battery_one_bar">Battery one bar.</string>
    <string name="accessibility_battery_remain">Remaining Battery %d Percent</string>
    <string name="accessibility_battery_save_mode">, Power Saving Mode Is On</string>
    <string name="accessibility_battery_three_bars">Battery three bars.</string>
    <string name="accessibility_battery_two_bars">Battery two bars.</string>
    <string name="accessibility_bluetooth_connected">Bluetooth connected.</string>
    <string name="accessibility_bluetooth_disconnected">Bluetooth disconnected.</string>
    <string name="accessibility_bluetooth_name">Connected to %s.</string>
    <string name="accessibility_bluetooth_tether">Bluetooth tethering.</string>
    <string name="accessibility_brightness">Display brightness</string>
    <string name="accessibility_camera_button">Camera</string>
    <string name="accessibility_cast_name">Connected to %s.</string>
    <string name="accessibility_casting">@string/quick_settings_casting</string>
    <string name="accessibility_casting_turned_off">Screen casting stopped.</string>
    <string name="accessibility_cell_data">Mobile Data</string>
    <string name="accessibility_cell_data_on">Mobile Data is on</string>
    <string name="accessibility_clear_all">Clear all notifications.</string>
    <string name="accessibility_compatibility_zoom_button">Compatibility zoom button.</string>
    <string name="accessibility_compatibility_zoom_example">Zoom smaller to larger screen.</string>
    <string name="accessibility_data_connection_wifi">Wi-Fi</string>
    <string name="accessibility_data_one_bar">Data one bar.</string>
    <string name="accessibility_data_saver_off">The Data Saving program is turned off</string>
    <string name="accessibility_data_saver_on">The Data Saving program is turned on</string>
    <string name="accessibility_data_signal_full">Data signal full.</string>
    <string name="accessibility_data_three_bars">Data three bars.</string>
    <string name="accessibility_data_two_bars">Data two bars.</string>
    <string name="accessibility_desc_close">Off</string>
    <string name="accessibility_desc_connected">Connected.</string>
    <string name="accessibility_desc_connecting">Connecting.</string>
    <string name="accessibility_desc_lock_screen">Lock screen.</string>
    <string name="accessibility_desc_notification_icon">%1$sNotification: %2$s</string>
    <string name="accessibility_desc_notification_shade">Notification shade.</string>
    <string name="accessibility_desc_off">Off.</string>
    <string name="accessibility_desc_on">On.</string>
    <string name="accessibility_desc_quick_settings">Quick settings.</string>
    <string name="accessibility_desc_quick_settings_edit">Quick Settings Editor.</string>
    <string name="accessibility_desc_recent_apps">Overview.</string>
    <string name="accessibility_desc_settings">Settings</string>
    <string name="accessibility_desc_work_lock">Work Lock Screen</string>
    <string name="accessibility_display_daltonizer_preference_subtitle">This feature is experimental and may affect performance.</string>
    <string name="accessibility_display_daltonizer_preference_title">Color correction</string>
    <string name="accessibility_divider">Split screen divider</string>
    <string name="accessibility_dlna">DLNA</string>
    <string name="accessibility_ethernet_connected">Ethernet connected.</string>
    <string name="accessibility_ethernet_disconnected">Ethernet disconnected.</string>
    <string name="accessibility_manage_notification">Manage notifications</string>
    <string name="aod_font_size">Font Size</string>
    <string name="aod_font_size_extra_large">Extra Large</string>
    <string name="aod_font_size_large">Large</string>
    <string name="aod_font_size_middle">Medium</string>
    <string name="aod_font_size_small">Small</string>
    <string name="aod_font_size_standard">Default</string>
    <string name="aod_font_style">Font</string>
    <string name="aod_signature_color">Color</string>
    <string name="aod_signature_string">Enter a personal mantra</string>
    <string name="aod_string_alignment">Alignment</string>
    <string name="black_screen_guide_btn_enable">Turn On</string>
    <string name="black_screen_guide_desc">Black Screen Mode turns off your screen, but keeps running apps that are currently being used.</string>
    <string name="black_screen_guide_title">Black Screen Mode</string>
    <string name="clear_all_notifications_text">Clear all</string>
    <string name="envelope_settings_assit_name">Red Packet Assistant</string>
    <string name="envelope_settings_auto_open_text">Automatically jump to the red packet chat interface</string>
    <string name="envelope_settings_sound_text">Red Packet Alert Sound</string>
    <string name="guesture_operation_pref">SELECT YOUR PREFERRED GESTURE LAYOUT</string>
    <string name="keyguard_fill_light_button">Cancel</string>
    <string name="keyguard_fill_light_content">Environment is dim. Adjusting screen brightness...</string>
    <string name="keyguard_fill_light_title">Brightness Compensation</string>
    <string name="manage_notifications_text">Manage</string>
    <string name="navigation_bar_combination_category">SELECT YOUR PREFERRED Button LAYOUT</string>
    <string name="navigation_side_gesture_disable_switch">Switch to Previous App</string>
    <string name="navigation_side_gesture_disable_switch_tip">Swipe inward from the left or right edge and hold to switch to the previous app.</string>
    <string name="navigation_side_gesture_enable_back_vibrate">Vibrate On Back Navigation</string>
    <string name="oppo_indication_follow_screen_rotation">Rotate \"Swipe-up gestures\" bars with screen</string>
    <string name="oppo_navigation_bar_hide_enable">Auto Hide Virtual Buttons</string>
    <string name="oppo_navigation_bar_settings_more_nav_mode_title">More</string>
    <string name="oppo_navigation_bar_settings_title">Navigation Buttons</string>
    <string name="oppo_navigation_bar_type">Virtual Buttons</string>
    <string name="oppo_navigation_gesture_type">Swipe-up Gestures</string>
    <string name="oppo_navigation_side_type">Swipe Gestures from Both Sides</string>
    <string name="oppo_navigation_type">NAVIGATION MODE</string>
    <string name="oppo_shortcuts_gesture_enter_singlehand_up">Pull Down to Enter One-Handed Mode</string>
    <string name="oppo_shortcuts_gesture_enter_singlehand_up_tip">When the phone is in the portrait orientation, pull down from the bottom of the screen to enter One-Handed Mode.</string>
    <string name="oppo_shortcuts_gesture_hide_guide_bar">Hide Gesture Guide Bar</string>
    <string name="oppo_shortcuts_gesture_mistouch_prevention_gesture_side">Mistouch Prevention for Swipe Gestures from Both Sides</string>
    <string name="oppo_shortcuts_gesture_mistouch_prevention_gesture_up">Mistouch Prevention for Swipe-Up Gestures</string>
    <string name="oppo_shortcuts_gesture_mistouch_prevention_tips">To use gesture navigation when the app is in full-screen landscape mode, swipe up once to bring up the guide bar and then swipe up again.</string>
    <string name="oppo_shortcuts_gesture_mistouch_prevention_tips_2">Swipe twice to navigate when using apps in fullscreen landscape mode.</string>
</resources>