<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen android:key="nav_bar_screen_pref_key"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.color.support.preference.ColorPreferenceCategory android:title="@string/oppo_navigation_type" android:key="nav_type_pref_key" app:isFirstCategory="true">
        <com.color.support.preference.ColorMarkPreference android:persistent="false" android:title="@string/oppo_navigation_gesture_type" android:key="nav_type_gesture_up_key" android:disableDependentsState="true" />
    </com.color.support.preference.ColorPreferenceCategory>
    <com.color.support.preference.ColorPreferenceCategory android:title="@string/guesture_operation_pref" android:key="gesture_up_combination_pref_key">
        <com.coloros.systemui.navbar.settings.GestureGuideCombinationPreference android:key="gesture_up_combination_both_back_key" />
        <com.coloros.systemui.navbar.settings.GestureGuideCombinationPreference android:key="gesture_up_combination_only_home_key" />
        <com.coloros.systemui.navbar.settings.GestureGuideCombinationPreference android:key="gesture_up_combination_right_back_key" />
        <com.coloros.systemui.navbar.settings.GestureGuideCombinationPreference android:key="gesture_up_combination_left_back_key" />
    </com.color.support.preference.ColorPreferenceCategory>
    <com.color.support.preference.ColorPreferenceCategory android:key="gesture_up_component_pref_key">
        <com.color.support.preference.ColorSwitchPreference android:title="@string/oppo_indication_follow_screen_rotation" android:key="gesture_up_follow_screen_rotation" />
        <com.color.support.preference.ColorSwitchPreference android:title="@string/oppo_shortcuts_gesture_hide_guide_bar" android:key="gesture_up_hide_guide_bar_key" />
        <com.color.support.preference.ColorSwitchPreference android:title="@string/oppo_shortcuts_gesture_mistouch_prevention_gesture_up" android:key="gesture_up_mistouch_prevention_key" android:summary="@string/oppo_shortcuts_gesture_mistouch_prevention_tips" />
    </com.color.support.preference.ColorPreferenceCategory>
    <com.color.support.preference.ColorPreferenceCategory android:key="end_divider_key" />
</androidx.preference.PreferenceScreen>