<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/aod_signture_background" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@android:id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/aod_signture_preference_margin_top" android:layout_marginStart="@dimen/aod_signture_preference_margin_left" style="@style/aod_title_text" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/aod_signture_preference_margin_inner_top">
        <TextView android:gravity="center" android:id="@id/aod_font_size_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aod_font_size_small" android:layout_weight="1.0" style="@style/aod_summary_text" />
        <TextView android:gravity="center" android:id="@id/aod_font_size_standard" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aod_font_size_standard" android:layout_weight="1.0" style="@style/aod_summary_text" />
        <TextView android:gravity="center" android:id="@id/aod_font_size_middle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aod_font_size_middle" android:layout_weight="1.0" style="@style/aod_summary_text" />
        <TextView android:gravity="center" android:id="@id/aod_font_size_large" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aod_font_size_large" android:layout_weight="1.0" style="@style/aod_summary_text" />
        <TextView android:gravity="center" android:id="@id/aod_font_size_extra_large" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aod_font_size_extra_large" android:layout_weight="1.0" style="@style/aod_summary_text" />
    </LinearLayout>
    <com.color.support.widget.seekbar.ColorAbsorbSeekBar android:id="@id/fontsize_seekbar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/aod_signture_preference_margin_inner_top" android:layout_marginBottom="@dimen/aod_signture_preference_margin_inner_top" android:layout_centerHorizontal="true" android:layout_marginStart="@dimen/aod_signture_seekbar_margin" android:layout_marginEnd="@dimen/aod_signture_seekbar_margin" app:colorAbsorbSeekBarBackgroundColor="@color/aod_seekbar_color" app:colorAbsorbSeekBarProgressColor="@color/aod_seekbar_thumb_color" app:colorAbsorbSeekBarThumbShadowColor="@color/aod_seekbar_color" />
</LinearLayout>