<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.statusbar.notification.row.FooterView android:background="@drawable/qs_background_primary" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/notification_gust_side_padding" android:paddingEnd="4.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.systemui.statusbar.AlphaOptimizedFrameLayout android:id="@id/content" android:layout_width="fill_parent" android:layout_height="@dimen/notification_footer_height">
        <RelativeLayout android:layout_gravity="start|center" android:id="@id/rl_stow_content" android:clickable="true" android:layout_width="180.0dip" android:layout_height="@dimen/notification_footer_height">
            <ImageView android:id="@id/iv_more_icon" android:layout_width="12.0dip" android:layout_height="12.0dip" android:src="@drawable/ic_notification_more" android:layout_centerVertical="true" android:layout_marginEnd="4.0dip" android:layout_alignParentStart="true" />
            <ImageView android:id="@id/ib_show_stow" android:clickable="false" android:layout_width="14.0dip" android:layout_height="14.0dip" android:src="@drawable/ic_notification_show_stow" android:layout_centerVertical="true" android:layout_toEndOf="@id/iv_more_icon" />
        </RelativeLayout>
        <com.android.systemui.statusbar.notification.row.FooterViewButton android:textColor="?wallpaperTextColor" android:layout_gravity="start" android:id="@id/manage_text" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/manage_notifications_text" android:contentDescription="@string/accessibility_manage_notification" android:textAllCaps="false" style="@android:style/Widget.Material.Button.Borderless" />
        <com.android.systemui.statusbar.notification.row.FooterViewButton android:textSize="@dimen/notification_footer_dismiss_text_size" android:textColor="@color/notification_action_button_text_color_selector" android:layout_gravity="end" android:id="@id/dismiss_text" android:background="@android:color/transparent" android:paddingTop="0.0dip" android:paddingBottom="0.0dip" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/clear_all_notifications_text" android:contentDescription="@string/accessibility_clear_all" style="@android:style/Widget.Material.Button.Borderless" />
    </com.android.systemui.statusbar.AlphaOptimizedFrameLayout>
</com.android.systemui.statusbar.notification.row.FooterView>