<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/black_screen_guide_title" android:textColor="@color/black_screen_guide_title" android:id="@id/tvTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/black_screen_guide_title_margin_top" android:text="@string/black_screen_guide_title" android:layout_centerHorizontal="true" android:fontFamily="OPPOSans_OS_Medium_1.4" />
    <TextView android:textSize="@dimen/black_screen_guide_desc" android:textColor="@color/black_screen_guide_desc" android:gravity="center_horizontal" android:id="@id/tvDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/black_screen_guide_desc_margin_top" android:maxWidth="@dimen/black_screen_guide_desc_max_width" android:text="@string/black_screen_guide_desc" android:layout_below="@id/tvTitle" android:layout_centerHorizontal="true" android:fontFamily="OPPOSans_OS_Regular_1.4" />
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/black_screen_guide_img_margin_top" android:src="@drawable/black_screen_guide" android:layout_below="@id/tvDesc" android:layout_centerHorizontal="true" android:forceDarkAllowed="false" />
    <com.color.support.widget.ColorButton android:textSize="@dimen/black_screen_guide_btn_enable" android:gravity="center" android:id="@id/btnEnable" android:layout_width="@dimen/black_screen_guide_btn_enable_width" android:layout_height="@dimen/black_screen_guide_btn_enable_height" android:layout_marginBottom="@dimen/black_screen_guide_btn_enable_margin_bottom" android:text="@string/black_screen_guide_btn_enable" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:onClick="onEnableBtnClick" android:contentDescription="@string/black_screen_guide_btn_enable" android:fontFamily="ColorFont-Medium" style="?colorButtonColorfulDefaultStyle" />
</RelativeLayout>