<?xml version="1.0" encoding="utf-8"?>
<com.coloros.systemui.keyguard.face.view.KeyguardFaceFillLightView android:background="#ffffffff" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center|top" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/color_font_size_TD17" android:textStyle="bold" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/keyguard_fill_light_title" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="@dimen/keyguard_fill_light_title_font_height" android:layout_marginTop="@dimen/keyguard_fill_light_title_margintop" android:text="@string/keyguard_fill_light_title" />
        <TextView android:textSize="@dimen/color_font_size_TD09" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/keyguard_fill_light_content" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="@dimen/keyguard_fill_light_content_font_height" android:layout_marginTop="@dimen/keyguard_fill_light_content_margintop" android:text="@string/keyguard_fill_light_content" android:alpha="@dimen/keyguard_fill_light_content_alpha" />
    </LinearLayout>
    <ImageView android:layout_gravity="bottom|center" android:layout_width="@dimen/keyguard_fill_light_view_width" android:layout_height="@dimen/keyguard_fill_light_view_height" android:layout_marginBottom="@dimen/keyguard_fill_light_view_marginbottom" android:src="@drawable/faceunlock_facial_light" />
    <TextView android:textSize="@dimen/color_font_size_TD09" android:textColor="#ff2ad181" android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/keyguard_fill_light_dismiss" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/keyguard_fill_light_button_marginbottom" android:text="@string/keyguard_fill_light_button" android:maxLines="1" android:textAllCaps="false" />
    <ImageView android:id="@id/Keyguard_fill_light_black_mask" android:background="#ff000000" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:alpha="0.4" />
</com.coloros.systemui.keyguard.face.view.KeyguardFaceFillLightView>